<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7f3f3">

        <android.support.v7.widget.Toolbar
            android:id="@+id/rgt_tb"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/color_white"
            app:title="返回"/>

        <ProgressBar
            android:id="@+id/rgt_pb_cir"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/cv_txt"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:visibility="gone" />

        <android.support.v7.widget.CardView
            android:id="@+id/rgt_cv_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardPreventCornerOverlap="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:id="@+id/rgt_cv_usr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/rgt_ti_usr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/rgt_et_usr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rgt_usr"
                            android:inputType="text"
                            android:maxLength="20">
                        </android.support.design.widget.TextInputEditText>
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/rgt_cv_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rgt_cv_usr">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/rgt_ti_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        app:counterEnabled="true"
                        app:counterMaxLength="11">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/rgt_et_num"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rgt_num"
                            android:inputType="phone"
                            android:maxLength="20">
                        </android.support.design.widget.TextInputEditText>
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/rgt_cv_cnm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rgt_cv_num">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/rgt_ti_cnm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/rgt_et_cnm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/rgt_cnm"
                                android:inputType="number"
                                android:maxLength="6">
                            </android.support.design.widget.TextInputEditText>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignEnd="@id/rgt_ti_cnm">

                            <Button
                                android:id="@+id/rgt_btn_snd"
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:text="@string/rgt_snd"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:background="@drawable/ripple_bg"/>

                        </android.support.v7.widget.CardView>
                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/rgt_cv_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rgt_cv_cnm">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/rgt_ti_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/rgt_et_pwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/et_pwd"
                            android:inputType="textPassword"
                            android:maxLength="20">
                        </android.support.design.widget.TextInputEditText>
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/rgt_cv_dbpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rgt_cv_pwd">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/rgt_ti_dbepwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/rgt_et_dbpwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rgt_dbepwd"
                            android:inputType="textPassword"
                            android:maxLength="20">
                        </android.support.design.widget.TextInputEditText>
                    </android.support.design.widget.TextInputLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/rgt_cv_rgt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardElevation="5dp"
            android:layout_below="@id/rgt_cv_txt">

            <Button
                android:id="@+id/rgt_btn_rgt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rgt_rgt"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@drawable/ripple_bg"/>
        </android.support.v7.widget.CardView>


    </RelativeLayout>

</android.support.v7.widget.CardView>